# auth

./: CLAUDE.md  README.md  docker-compose.yml  lefthook.yml
.github/: pull_request_template.md
.github/workflows/: auth-deploy.yml  auth-lint.yml  auth-test.yml  flyway-auth-deploy.yml  migrations-deploy.yml  terraform-lint.yml  web-deploy.yml  web-lint.yml
apps/auth/: .env.sample  .gitignore  Cargo.toml
apps/auth/docker/: Dockerfile
apps/auth/docs/: openapi.yml
apps/auth/scripts/: generate_ssh_key.sh
apps/auth/src/: main.rs
apps/auth/src/application/config/: app_state.rs
apps/auth/src/application/handler/: get_user.rs  healthcheck.rs  login.rs  mod.rs  register_user.rs
apps/auth/src/application/model/: user.rs
apps/auth/src/domain/error/: app_error.rs
apps/auth/src/domain/model/: jwt.rs  user.rs
apps/auth/src/domain/repository/: user_repository.rs
apps/auth/src/domain/service/: authorization_service.rs  jwt_service.rs  mod.rs  password_service.rs  user_service.rs
apps/auth/src/infrastructure/repository/: mod.rs  sqlx_pool.rs  sqlx_user_repository.rs
apps/web/: biome.json  package.json  tsconfig.app.json
apps/web/src/: index.css
apps/web/src/app/: index.tsx  provider.tsx  router.tsx
apps/web/src/config/: env.ts  paths.ts
apps/web/src/lib/: auth.tsx
apps/web/src/types/: access-token.ts
docs/: architecture.drawio
tools/migrations/: .env.sample
tools/migrations/docker/: Dockerfile
tools/migrations/scripts/: run_flyway.sh
tools/migrations/sql/auth/: V1__create_users_table.sql
tools/terraform/: .gitignore
(+78 files in other folders)
